Theme: Fix margins on aligned images
Aligned images would still have padding on their aligned side. This removes that margin.

--- a/build_files/theme/css/theme_overrides.css
+++ b/build_files/theme/css/theme_overrides.css
@@ -127,6 +127,14 @@ table.docutils:not(.valign) td {
 	vertical-align: top;
 }
 
+/* Fix margins on aligned images. */
+figure.align-right {
+	margin-right: 0;
+}
+figure.align-left {
+	margin-left: 0;
+}
+
 /* Decrease whitespace above figure and add it below */
 figure {
 	padding-bottom: 0.5rem;
